[M]modify compile version to 16